@@ -1,3 +1,8 @@
+Sun Jul  7 23:56:32 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (bary_mul_karatsuba): Unreachable code removed.  Remove
+	  several branches.
+
 Sun Jul  7 22:59:06 2013  Tanaka Akira  <akr@fsij.org>
 
 	* internal.h (rb_big_mul_normal): Declared.
